# LLM-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tasks.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 1e91ee1f8c0c_alter_default_value_of_status_column.py  200c4d7159fd_add_columns_to_large_language_models.py  803e9d212f6f_alter_table_name_to_large_language_.py  827782979504_add_large_language_model_table.py  f7baa5134456_add_composite_unique_constraint.py
app/api/: main.py
app/api/routes/: llms.py
app/core/: database.py
app/crud/: llm.py
app/models/: llms.py
