[project]
name = "llm-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.0",
    "invoke>=2.2.0",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]
